--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
 	<title>New Tab</title>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
 </head>
-<body>
+<body style="background-image: url(back2.jpg);">
 	<div class="container">
+<!-- 		<img class= "background" src="back2.jpg"> -->
 		<div class="wrapper">
 			<h1 class="time"></h1>
-			<hr>
-			<p class="date"></p>
-			<p class="qoute"></p>
+			
+			<p class="date">Monday 20th of March 2019</p>
+			<p class="qoute">"NO True man can survive" </p>
 		</div>
 	</div>
 
