--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
 </head>
 <body style="background-image: url(back2.jpg);">
 	<div class="container">
-<!-- 		<img class= "background" src="back2.jpg"> -->
 		<div class="wrapper">
 			<h1 class="time"></h1>
-			
+			<p class="greeting"></p>
+			<form action="">
+				<input type="text" class="username">
+			</form>
 			<p class="date">Monday 20th of March 2019</p>
 			<p class="qoute">"NO True man can survive" </p>
 		</div>
 	</div>
-
+	<script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
