--- a/index.html
+++ b/index.html
@@ -2,19 +2,27 @@
 <html>
 <head>
 	<title>New Tab</title>
-	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+	<link rel="stylesheet" href="styles.css">
+
 </head>
-<body style="background-image: url(back2.jpg);">
-	<div class="container">
+	
+<body style="background-image: url(back2.jpg); background-position: center; background-repeat: no-repeat;background-size: cover;">
+	<div class="container ">
 		<div class="wrapper">
-			<h1 class="time"></h1>
-			<p class="greeting"></p>
-			<form action="">
-				<input type="text" class="username">
-			</form>
+			<div class="wrapper2 animated fadeInUp">
+				<h1 class="time animated fadeInUp delay-2s">00:00</h1>
+				<p class="greeting">Heelo</p>
+				<form action="">
+					<input type="text" spellcheck="false" class="username">
+				</form>
+			</div>
 			<p class="date">Monday 20th of March 2019</p>
-			<p class="qoute">"NO True man can survive" </p>
+			<div class="location">
+				<p class="place">Location:</p>
+				<p class="credit">Photo by <a href="#"></a></p>
+			</div>
 		</div>
 	</div>
 	<script
