Added Fetch API and greeting sign

--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
 
 </head>
 	
-<body style="background-image: url(back2.jpg); background-position: center; background-repeat: no-repeat;background-size: cover;">
+<body>
 	<div class="container ">
 		<div class="wrapper">
 			<div class="wrapper2 animated fadeInUp">
 				<h1 class="time animated fadeInUp delay-2s">00:00</h1>
 				<p class="greeting">Heelo</p>
-				<form action="">
+				<form >
 					<input type="text" spellcheck="false" class="username">
 				</form>
 			</div>
-			<p class="date">Monday 20th of March 2019</p>
+			<p class="date animated fadeInDown delay-2s">Monday 20th of March 2019</p>
 			<div class="location">
-				<p class="place">Location:</p>
-				<p class="credit">Photo by <a href="#"></a></p>
+				<p class="place animated fadeInDown delay-2s">Location:</p>
+				<p class="credit animated fadeInDown delay-2s">Photo by  <a href="#" class="insta"></a></p>
 			</div>
 		</div>
 	</div>
-	<script
-  src="http://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+	
+	<script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
