--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 </head>
 	
-<body>
+<body class="animated fadeIn delay-3s">
 	<div class="container ">
 		<div class="wrapper">
 			<div class="wrapper2 animated fadeInUp">
+
 				<h1 class="time animated fadeInUp delay-2s">00:00</h1>
-				<p class="greeting">Heelo</p>
+				<p class="greeting">Hello</p>
 				<form >
 					<input type="text" spellcheck="false" class="username">
 				</form>
@@ -25,6 +26,10 @@
 			</div>
 		</div>
 	</div>
+<!-- 	<div class="spinner">
+		<div class="double-bounce1"></div>
+		<div class="double-bounce2"></div>
+	</div> -->
 	
 	<script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
